// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hcaptcha snapshot tests renders Hcaptcha with all props 1`] = `
<WebView
  automaticallyAdjustContentInsets={true}
  injectedJavaScript="(function () {
  var originalPostMessage = window.ReactNativeWebView.postMessage;
  var patchedPostMessage = function patchedPostMessage(message, targetOrigin, transfer) {
    originalPostMessage(message, targetOrigin, transfer);
  };
  patchedPostMessage.toString = function () {
    return String(Object.hasOwnProperty).replace('hasOwnProperty', 'postMessage');
  };
  window.ReactNativeWebView.postMessage = patchedPostMessage;
})();"
  javaScriptEnabled={true}
  mixedContentMode="always"
  onShouldStartLoadWithRequest={[Function]}
  originWhitelist={
    Array [
      "*",
    ]
  }
  renderLoading={[Function]}
  source={
    Object {
      "baseUrl": "https://hcaptcha.com",
      "html": "<!DOCTYPE html>
      <html>
      <head>
        <meta charset=\\"UTF-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
        <script type=\\"text/javascript\\">
          [\\"rnver_0_0_0\\",\\"dep_mocked-md5\\",\\"sdk_1_7_1\\"].forEach(function (value, i) { window[value] = true; });
        </script>
        <script src=\\"https://all.props/api-endpoint?render=explicit&onload=onloadCallback&host=all-props-host&hl=fr&endpoint=https%3A%2F%2Fall.props%2Fendpoint&assethost=https%3A%2F%2Fall.props%2Fassethost&imghost=https%3A%2F%2Fall.props%2Fimghost&reportapi=https%3A%2F%2Fall.props%2Freportapi\\" async defer></script>
        <script type=\\"text/javascript\\">
          var onloadCallback = function() {
            try {
              console.log(\\"challenge onload starting\\");
              hcaptcha.render(\\"submit\\", getRenderConfig(\\"00000000-0000-0000-0000-000000000000\\", \\"contrast\\", \\"normal\\"));
              // have loaded by this point; render is sync.
              console.log(\\"challenge render complete\\");
            } catch (e) {
              console.log(\\"challenge failed to render\\");
              window.ReactNativeWebView.postMessage(\\"error\\");
            }
            try {
              console.log(\\"showing challenge\\");
              hcaptcha.execute(getExecuteOpts());
            } catch (e) {
              console.log(\\"failed to show challenge\\");
              window.ReactNativeWebView.postMessage(\\"error\\");
            }
          };
          var onDataCallback = function(response) {
            window.ReactNativeWebView.postMessage(response);
          };
          var onCancel = function() {
            window.ReactNativeWebView.postMessage(\\"cancel\\");
          };
          var onOpen = function() {
            window.ReactNativeWebView.postMessage(\\"open\\");
            console.log(\\"challenge opened\\");
          };
          var onDataExpiredCallback = function(error) { window.ReactNativeWebView.postMessage(\\"expired\\"); };
          var onChalExpiredCallback = function(error) { window.ReactNativeWebView.postMessage(\\"cancel\\"); };
          var onDataErrorCallback = function(error) {
            console.log(\\"challenge error callback fired\\");
            window.ReactNativeWebView.postMessage(\\"error\\");
          };
          const getRenderConfig = function(siteKey, theme, size) {
            var config = {
              sitekey: siteKey,
              size: size,
              callback: onDataCallback,
              \\"close-callback\\": onCancel,
              \\"open-callback\\": onOpen,
              \\"expired-callback\\": onDataExpiredCallback,
              \\"chalexpired-callback\\": onChalExpiredCallback,
              \\"error-callback\\": onDataErrorCallback
            };
            if (theme) {
              config.theme = theme;
            }
            return config;
          };
          const getExecuteOpts = function() {
            var opts;
            const rqdata = \\"{}\\";
            if (rqdata) {
              opts = {\\"rqdata\\": rqdata};
            }
            return opts;
          };
        </script>
      </head>
      <body style=\\"background-color: rgba(0.1, 0.1, 0.1, 0.4);\\">
        <div id=\\"submit\\"></div>
      </body>
      </html>",
    }
  }
  startInLoadingState={true}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "width": "100%",
      },
      undefined,
    ]
  }
/>
`;

exports[`Hcaptcha snapshot tests renders Hcaptcha with minimum props 1`] = `
<WebView
  automaticallyAdjustContentInsets={true}
  injectedJavaScript="(function () {
  var originalPostMessage = window.ReactNativeWebView.postMessage;
  var patchedPostMessage = function patchedPostMessage(message, targetOrigin, transfer) {
    originalPostMessage(message, targetOrigin, transfer);
  };
  patchedPostMessage.toString = function () {
    return String(Object.hasOwnProperty).replace('hasOwnProperty', 'postMessage');
  };
  window.ReactNativeWebView.postMessage = patchedPostMessage;
})();"
  javaScriptEnabled={true}
  mixedContentMode="always"
  onShouldStartLoadWithRequest={[Function]}
  originWhitelist={
    Array [
      "*",
    ]
  }
  renderLoading={[Function]}
  source={
    Object {
      "baseUrl": "https://hcaptcha.com",
      "html": "<!DOCTYPE html>
      <html>
      <head>
        <meta charset=\\"UTF-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
        <script type=\\"text/javascript\\">
          [\\"test_key\\"].forEach(function (value, i) { window[value] = true; });
        </script>
        <script src=\\"https://hcaptcha.com/1/api.js?render=explicit&onload=onloadCallback&host=missing-sitekey.react-native.hcaptcha.com\\" async defer></script>
        <script type=\\"text/javascript\\">
          var onloadCallback = function() {
            try {
              console.log(\\"challenge onload starting\\");
              hcaptcha.render(\\"submit\\", getRenderConfig(\\"\\", undefined, \\"invisible\\"));
              // have loaded by this point; render is sync.
              console.log(\\"challenge render complete\\");
            } catch (e) {
              console.log(\\"challenge failed to render\\");
              window.ReactNativeWebView.postMessage(\\"error\\");
            }
            try {
              console.log(\\"showing challenge\\");
              hcaptcha.execute(getExecuteOpts());
            } catch (e) {
              console.log(\\"failed to show challenge\\");
              window.ReactNativeWebView.postMessage(\\"error\\");
            }
          };
          var onDataCallback = function(response) {
            window.ReactNativeWebView.postMessage(response);
          };
          var onCancel = function() {
            window.ReactNativeWebView.postMessage(\\"cancel\\");
          };
          var onOpen = function() {
            window.ReactNativeWebView.postMessage(\\"open\\");
            console.log(\\"challenge opened\\");
          };
          var onDataExpiredCallback = function(error) { window.ReactNativeWebView.postMessage(\\"expired\\"); };
          var onChalExpiredCallback = function(error) { window.ReactNativeWebView.postMessage(\\"cancel\\"); };
          var onDataErrorCallback = function(error) {
            console.log(\\"challenge error callback fired\\");
            window.ReactNativeWebView.postMessage(\\"error\\");
          };
          const getRenderConfig = function(siteKey, theme, size) {
            var config = {
              sitekey: siteKey,
              size: size,
              callback: onDataCallback,
              \\"close-callback\\": onCancel,
              \\"open-callback\\": onOpen,
              \\"expired-callback\\": onDataExpiredCallback,
              \\"chalexpired-callback\\": onChalExpiredCallback,
              \\"error-callback\\": onDataErrorCallback
            };
            if (theme) {
              config.theme = theme;
            }
            return config;
          };
          const getExecuteOpts = function() {
            var opts;
            const rqdata = undefined;
            if (rqdata) {
              opts = {\\"rqdata\\": rqdata};
            }
            return opts;
          };
        </script>
      </head>
      <body style=\\"background-color: undefined;\\">
        <div id=\\"submit\\"></div>
      </body>
      </html>",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "width": "100%",
      },
      undefined,
    ]
  }
/>
`;
